// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Brokers Component Brokers Empty matches Brokers Empty snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Brokers
      activeControllers={0}
      brokerCount={0}
      fetchBrokers={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      fetchClusterStats={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      inSyncReplicasCount={0}
      isFetched={false}
      offlinePartitionCount={0}
      onlinePartitionCount={0}
      outOfSyncReplicasCount={0}
      underReplicatedPartitionCount={0}
      zooKeeperStatus={0}
    >
      <div
        className="section"
      >
        <Breadcrumb>
          <nav
            aria-label="breadcrumbs"
            className="breadcrumb"
          >
            <ul>
              <li
                className="is-active"
              >
                <span
                  className=""
                >
                  Brokers overview
                </span>
              </li>
            </ul>
          </nav>
        </Breadcrumb>
        <MetricsWrapper
          title="Uptime"
        >
          <div
            className="box"
          >
            <h5
              className="subtitle is-6"
            >
              Uptime
            </h5>
            <div
              className="level"
            >
              <Indicator
                className="is-one-third"
                label="Total Brokers"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Total Brokers"
                  >
                    <p
                      className="heading"
                    >
                      Total Brokers
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                className="is-one-third"
                label="Active Controllers"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Active Controllers"
                  >
                    <p
                      className="heading"
                    >
                      Active Controllers
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                className="is-one-third"
                label="Zookeeper Status"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Zookeeper Status"
                  >
                    <p
                      className="heading"
                    >
                      Zookeeper Status
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      <span
                        className="tag is-danger"
                      >
                        Offline
                      </span>
                    </p>
                  </div>
                </div>
              </Indicator>
            </div>
          </div>
        </MetricsWrapper>
        <MetricsWrapper
          title="Partitions"
        >
          <div
            className="box"
          >
            <h5
              className="subtitle is-6"
            >
              Partitions
            </h5>
            <div
              className="level"
            >
              <Indicator
                label="Online"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="Online"
                  >
                    <p
                      className="heading"
                    >
                      Online
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      <span
                        className=""
                      >
                        0
                      </span>
                      <span
                        className="subtitle has-text-weight-light"
                      >
                         
                        of
                        0
                      </span>
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                label="URP"
                title="Under replicated partitions"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="Under replicated partitions"
                  >
                    <p
                      className="heading"
                    >
                      URP
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                label="In Sync Replicas"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="In Sync Replicas"
                  >
                    <p
                      className="heading"
                    >
                      In Sync Replicas
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                label="Out of Sync Replicas"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="Out of Sync Replicas"
                  >
                    <p
                      className="heading"
                    >
                      Out of Sync Replicas
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
            </div>
          </div>
        </MetricsWrapper>
        <MetricsWrapper
          multiline={true}
          title="Disk Usage"
        >
          <div
            className="box"
          >
            <h5
              className="subtitle is-6"
            >
              Disk Usage
            </h5>
            <div
              className="level level-multiline"
            />
          </div>
        </MetricsWrapper>
      </div>
    </Brokers>
  </Router>
</StaticRouter>
`;

exports[`Brokers Component Brokers matches snapshot 1`] = `
<StaticRouter
  context={Object {}}
  location={
    Object {
      "pathname": "ui/clusters/local/brokers",
    }
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "ui/clusters/local/brokers",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    staticContext={Object {}}
  >
    <Brokers
      activeControllers={1}
      brokerCount={1}
      diskUsage={
        Array [
          Object {
            "brokerId": 1,
            "segmentCount": 64,
            "segmentSize": 60718,
          },
        ]
      }
      fetchBrokers={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      fetchClusterStats={
        [MockFunction] {
          "calls": Array [
            Array [
              undefined,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      inSyncReplicasCount={64}
      isFetched={true}
      offlinePartitionCount={0}
      onlinePartitionCount={64}
      outOfSyncReplicasCount={0}
      underReplicatedPartitionCount={0}
      zooKeeperStatus={1}
    >
      <div
        className="section"
      >
        <Breadcrumb>
          <nav
            aria-label="breadcrumbs"
            className="breadcrumb"
          >
            <ul>
              <li
                className="is-active"
              >
                <span
                  className=""
                >
                  Brokers overview
                </span>
              </li>
            </ul>
          </nav>
        </Breadcrumb>
        <MetricsWrapper
          title="Uptime"
        >
          <div
            className="box"
          >
            <h5
              className="subtitle is-6"
            >
              Uptime
            </h5>
            <div
              className="level"
            >
              <Indicator
                className="is-one-third"
                label="Total Brokers"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Total Brokers"
                  >
                    <p
                      className="heading"
                    >
                      Total Brokers
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      1
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                className="is-one-third"
                label="Active Controllers"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Active Controllers"
                  >
                    <p
                      className="heading"
                    >
                      Active Controllers
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      1
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                className="is-one-third"
                label="Zookeeper Status"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Zookeeper Status"
                  >
                    <p
                      className="heading"
                    >
                      Zookeeper Status
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      <span
                        className="tag is-success"
                      >
                        Online
                      </span>
                    </p>
                  </div>
                </div>
              </Indicator>
            </div>
          </div>
        </MetricsWrapper>
        <MetricsWrapper
          title="Partitions"
        >
          <div
            className="box"
          >
            <h5
              className="subtitle is-6"
            >
              Partitions
            </h5>
            <div
              className="level"
            >
              <Indicator
                label="Online"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="Online"
                  >
                    <p
                      className="heading"
                    >
                      Online
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      <span
                        className=""
                      >
                        64
                      </span>
                      <span
                        className="subtitle has-text-weight-light"
                      >
                         
                        of
                        64
                      </span>
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                label="URP"
                title="Under replicated partitions"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="Under replicated partitions"
                  >
                    <p
                      className="heading"
                    >
                      URP
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                label="In Sync Replicas"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="In Sync Replicas"
                  >
                    <p
                      className="heading"
                    >
                      In Sync Replicas
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      64
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                label="Out of Sync Replicas"
              >
                <div
                  className="level-item"
                >
                  <div
                    title="Out of Sync Replicas"
                  >
                    <p
                      className="heading"
                    >
                      Out of Sync Replicas
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      0
                    </p>
                  </div>
                </div>
              </Indicator>
            </div>
          </div>
        </MetricsWrapper>
        <MetricsWrapper
          multiline={true}
          title="Disk Usage"
        >
          <div
            className="box"
          >
            <h5
              className="subtitle is-6"
            >
              Disk Usage
            </h5>
            <div
              className="level level-multiline"
            >
              <Indicator
                className="is-one-third"
                label="Broker"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Broker"
                  >
                    <p
                      className="heading"
                    >
                      Broker
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      1
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                className="is-one-third"
                label="Segment Size"
                title=""
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Segment Size"
                  >
                    <p
                      className="heading"
                    >
                      Segment Size
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      <BytesFormatted
                        value={60718}
                      >
                        <span>
                          59KB
                        </span>
                      </BytesFormatted>
                    </p>
                  </div>
                </div>
              </Indicator>
              <Indicator
                className="is-one-third"
                label="Segment count"
              >
                <div
                  className="level-item is-one-third"
                >
                  <div
                    title="Segment count"
                  >
                    <p
                      className="heading"
                    >
                      Segment count
                    </p>
                    <p
                      className="title has-text-centered"
                    >
                      64
                    </p>
                  </div>
                </div>
              </Indicator>
            </div>
          </div>
        </MetricsWrapper>
      </div>
    </Brokers>
  </Router>
</StaticRouter>
`;
